libqt6c/src/libqitemselectionmodel.hpp

typedef struct QAbstractItemModel QAbstractItemModel;
typedef struct QItemSelection QItemSelection;
typedef struct QItemSelectionRange QItemSelectionRange;
typedef struct QMetaObject QMetaObject;
typedef struct QModelIndex QModelIndex;
QItemSelection* QItemSelection_new(const QModelIndex* topLeft, const QModelIndex* bottomRight);
QItemSelection* QItemSelection_new2();
QItemSelection* QItemSelection_new3(const QItemSelection* param1);
void QItemSelection_Select(QItemSelection* self, const QModelIndex* topLeft, const QModelIndex* bottomRight);
bool QItemSelection_Contains(const QItemSelection* self, const QModelIndex* index);
libqt_list /* of QModelIndex* */ QItemSelection_Indexes(const QItemSelection* self);
void QItemSelection_Merge(QItemSelection* self, const QItemSelection* other, int command);
void QItemSelection_Split(const QItemSelectionRange* range, const QItemSelectionRange* other, QItemSelection* result);
void QItemSelection_Delete(QItemSelection* self);