QtBeef/src/Qt/qitemselectionmodel.bf

interface IQItemSelectionModel
{
	public QMetaObject* MetaObject();
	public void* Qt_metacast();
	public c_int Qt_metacall();
	public libqt_string Tr();
	public QModelIndex CurrentIndex();
	public bool IsSelected();
	public bool IsRowSelected();
	public bool IsColumnSelected();
	public bool RowIntersectsSelection();
	public bool ColumnIntersectsSelection();
	public bool HasSelection();
	public void* SelectedIndexes();
	public void* SelectedRows();
	public void* SelectedColumns();
	public QItemSelection Selection();
	public QAbstractItemModel* Model();
	public QAbstractItemModel* Model2();
	public void SetModel();
	public void SetCurrentIndex();
	public void Select();
	public void Select2();
	public void Clear();
	public void Reset();
	public void ClearSelection();
	public void ClearCurrentIndex();
	public void SelectionChanged();
	public void CurrentChanged();
	public void CurrentRowChanged();
	public void CurrentColumnChanged();
	public void ModelChanged();
	public void EmitSelectionChanged();
	public libqt_string Tr2();
	public libqt_string Tr3();
	public bool IsRowSelected2();
	public bool IsColumnSelected2();
	public bool RowIntersectsSelection2();
	public bool ColumnIntersectsSelection2();
	public void* SelectedRows1();
	public void* SelectedColumns1();
}
// --------------------------------------------------------------
// QItemSelection
// --------------------------------------------------------------
[CRepr]
struct QItemSelection_Ptr: void
{
}
extension CQt
{
	[LinkName("QItemSelection_new")]
	public static extern QItemSelection_Ptr* QItemSelection_new(QModelIndex_Ptr* topLeft, QModelIndex_Ptr* bottomRight);
	[LinkName("QItemSelection_new2")]
	public static extern QItemSelection_Ptr* QItemSelection_new2();
	[LinkName("QItemSelection_new3")]
	public static extern QItemSelection_Ptr* QItemSelection_new3(QItemSelection_Ptr* param1);
	[LinkName("QItemSelection_Delete")]
	public static extern void QItemSelection_Delete(QItemSelection_Ptr* self);
	[LinkName("QItemSelection_Select")]
	public static extern void QItemSelection_Select(QItemSelection_Ptr* self, QModelIndex_Ptr* topLeft, QModelIndex_Ptr* bottomRight);
	[LinkName("QItemSelection_Contains")]
	public static extern bool QItemSelection_Contains(QItemSelection_Ptr* self, QModelIndex_Ptr* index);
	[LinkName("QItemSelection_Indexes")]
	public static extern void* QItemSelection_Indexes(QItemSelection_Ptr* self);
	[LinkName("QItemSelection_Merge")]
	public static extern void QItemSelection_Merge(QItemSelection_Ptr* self, QItemSelection_Ptr* other, void* command);
	[LinkName("QItemSelection_Split")]
	public static extern void QItemSelection_Split(QItemSelectionRange_Ptr* range, QItemSelectionRange_Ptr* other, QItemSelection_Ptr* result);
}
class QItemSelection
{
	private QItemSelection_Ptr* ptr;
	public this(QModelIndex_Ptr* topLeft, QModelIndex_Ptr* bottomRight)
	{
		this.ptr = CQt.QItemSelection_new(topLeft, bottomRight);
	}
	public this()
	{
		this.ptr = CQt.QItemSelection_new2();
	}
	public this(QItemSelection_Ptr* param1)
	{
		this.ptr = CQt.QItemSelection_new3(param1);
	}
	public ~this()
	{
		CQt.QItemSelection_Delete(this.ptr);
	}
	public void Select(QModelIndex_Ptr* topLeft, QModelIndex_Ptr* bottomRight)
	{
		CQt.QItemSelection_Select((.)this.ptr, topLeft, bottomRight);
	}
	public bool Contains(QModelIndex_Ptr* index)
	{
		return CQt.QItemSelection_Contains((.)this.ptr, index);
	}
	public void* Indexes()
	{
		return CQt.QItemSelection_Indexes((.)this.ptr);
	}
	public void Merge(QItemSelection_Ptr* other, void* command)
	{
		CQt.QItemSelection_Merge((.)this.ptr, other, command);
	}
	public void Split(QItemSelectionRange_Ptr* range, QItemSelectionRange_Ptr* other, QItemSelection_Ptr* result)
	{
		CQt.QItemSelection_Split(range, other, result);
	}
}
interface IQItemSelection
{
	public void Select();
	public bool Contains();
	public void* Indexes();
	public void Merge();
	public void Split();
}
[AllowDuplicates]
enum QItemSelectionModel_SelectionFlag
{
	NoUpdate = 0,
	Clear = 1,
	Select = 2,
	Deselect = 4,
	Toggle = 8,
	Current = 16,
	Rows = 32,
	Columns = 64,
	SelectCurrent = 18,
	ToggleCurrent = 24,
	ClearAndSelect = 3,
}